--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/freelancer.css" rel="stylesheet">
     
-    <script type="text/javascript" src="/js/onlinetuner.min.js"></script>
+    <script type="text/javascript" src="/onlinetuner.co/js/onlinetuner.min.js"></script>
 	<script type="text/javascript">
 	function start() {
 
